# mygame

./: .gitmodules  CMakeLists.txt  README.md
mygame/assets/: shader.frag  shader.vert
mygame/include/: camera.hpp  entity.hpp  glitter.hpp  model.hpp  renderer.hpp  shader.hpp  util.hpp
mygame/src/: camera.cpp  entity.cpp  main.cpp  model.cpp  renderer.cpp  shader.cpp  util.cpp
